[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"
rand = "0.7.2"
termion = "1.5.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false